# popchat

./: Pipfile  README.md  config.py  dev_setup.sql  dev_test.sql  wsgi.py
app/: __init__.py
app/api/v1/: __init__.py  views.py
app/auth/: __init__.py  views.py
app/chat/: background_tasks.py  chat.py
backend/: .dockerignore  Dockerfile  Pipfile  config.py  docker-compose.yml  fabfile.py  requirements.txt  setup-nginx.sh  wsgi.py
backend/api/: __init__.py  models.py  sockets.py
backend/api/auth/: __init__.py  auth_utils.py  views.py
backend/api/chat/: __init__.py  background_tasks.py  chat.py  events.py
backend/api/v1/: views.py
backend/database/: Dockerfile  popchat-db.dump
backend/models/: base_model.py  chat.py  message.py  model.py  room.py  user.py
backend/storage/: __init__.py  engine.py
client/: index.html  package-lock.json  package.json  packageb.json  tailwind.config.cjs
client/src/: App.svelte  app.css  vite-env.d.ts
client/src/components/: Button.svelte  ChatHeader.svelte  (+11 more)
models/: chat.py  model.py  room.py  secondary_tables.py  user.py
server/: .dockerignore  .env.sample  Dockerfile  config.py  docker-compose.yml  entrypoint.sh  fabfile.py  main.py  pyproject.toml  requirements.txt  setup-nginx-docker.sh  setup-nginx.sh
server/app/: __init__.py  utils.py
server/app/db/: __init__.py  engine.py
server/app/middlewares/: auth.py  chat.py
server/app/models/: base_model.py  chat.py  message.py  room.py  user.py
server/app/routers/: auth.py  chat.py
server/app/schemas/: models.py
server/app/settings/: __init__.py
(+7 files in other folders)
